--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     				<div class="title">
     					<h3>극동건설 Copy_Site</h3>
     				</div>
-					<a href="portfolio/index.html" class="viewBtn">More View</a>
+					<a href="Kukdong/index.html" class="viewBtn">More View</a>
     			</div>
     		</div>
     	</div>
@@ -129,7 +129,7 @@
     				<div class="title">
     					<h3>Bench</h3>
     				</div>
-					<a href="portfolio/bench/Bench.html" class="viewBtn">More View</a>
+					<a href="bench/Bench.html" class="viewBtn">More View</a>
     				
     			</div>
     		</div>
@@ -146,7 +146,7 @@
     				<div class="title">
     					<h3>Xiaomi Copy_Site</h3>
     				</div>
-    				<a href="portfolio/bench/Xiomi/index.html" class="viewBtn">More View</a>
+    				<a href="Xiomi/index.html" class="viewBtn">More View</a>
     			</div>
     		</div>
     	</div>
