--- a/Kukdong/index.html
+++ b/Kukdong/index.html
@@ -5,7 +5,7 @@
 	<title>Kukdong Construction</title>
 	<link rel="stylesheet" href="css/default.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/jquery.js"></script>
 </head>
 <body>
@@ -365,7 +365,7 @@
 						<ul class="port">
 							<li class="protfolio-slide">
 								<div class="imgBox">
-									<img src="img/port_img2_1.jpg" alt="">
+									<img src="img/port_imgnew2_1.jpg" alt="">
 								</div>
 								<div class="textBox">
 									<div class="inner_group_box">
@@ -391,7 +391,7 @@
 							</li>
 							<li class="protfolio-slide">
 								<div class="imgBox">
-									<img src="img/port_img2_2.jpg">
+									<img src="img/port_imgnew2_2.jpg">
 								</div>
 								<div class="textBox">
 									<div class="inner_group_box">
@@ -404,7 +404,7 @@
 							</li>
 							<li class="protfolio-slide">
 								<div class="imgBox">
-									<img src="img/port_img2_3.jpg" alt="">
+									<img src="img/port_imgnew2_3.jpg" alt="">
 								</div>
 								<div class="textBox">
 									<div class="inner_group_box">
@@ -417,7 +417,7 @@
 							</li>
 							<li class="protfolio-slide">
 								<div class="imgBox">
-									<img src="img/port_img2_4.jpg" alt="">
+									<img src="img/port_imgnew2_4.jpg" alt="">
 								</div>
 								<div class="textBox">
 									<div class="inner_group_box">
@@ -430,7 +430,7 @@
 							</li>
 							<li class="protfolio-slide">
 								<div class="imgBox">
-									<img src="img/port_img2_5.jpg" alt="">
+									<img src="img/port_imgnew2_5.jpg" alt="">
 								</div>
 								<div class="textBox">
 									<div class="inner_group_box">
