--- a/Xiomi/index.html
+++ b/Xiomi/index.html
@@ -5,8 +5,8 @@
 	<title>Mi global</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="css/default.css">
-  <link rel="shortcut icon" href="image/icon.png">
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <link rel="shortcut icon" href="image_1/icon.png">
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/default.js"></script>
 </head>
 <body>
@@ -25,7 +25,7 @@
           <a href="MiPhones.html">Mi Phones</a>
           <ul class="sub">
             <li>
-             <a href="#"><img src="image/Mi/mi9.png"></a>
+             <a href="#"><img src="Mi/mi9.png"></a>
              <p class="explan">
                <a href="#">MI 9</a>
              </p>
@@ -38,17 +38,17 @@
         <li>
           <a href="#">Redmi Phones</a>
           <ul class="sub">
-            <li><a href="#"><img src="image/Mi/Redmi8.png"></a>
+            <li><a href="#"><img src="Mi/Redmi8.png"></a>
              <p class="explan">
                <a href="#">Redmi Note8</a>
              </p>
             </li>
-            <li><a href="#"><img src="image/Mi/Redmi7.png"></a>
+            <li><a href="#"><img src="Mi/Redmi7.png"></a>
              <p class="explan">
                <a href="#">Redmi Note7</a>
              </p>
             </li>
-            <li><a href="#"><img src="image/Mi/Redmi5.jpg"></a>
+            <li><a href="#"><img src="Mi/Redmi5.jpg"></a>
              <p class="explan">
                <a href="#">Redmi Note5</a>
              </p>
@@ -59,7 +59,7 @@
         <li>
           <a href="#">POCOPHONE</a>
           <ul class="sub">
-            <li><a href=""><img src="image/Mi/poco-black.jpg"></a>
+            <li><a href=""><img src="Mi/poco-black.jpg"></a>
              <p class="explan">
                <a href="#">POCOPHONE F1</a>
              </p>
@@ -73,33 +73,33 @@
           <a href="#">스마트 기기</a>
           <ul class="sub">
             <li>
-              <a href=""><img src="image/Mi/Mi_Air_purifier.png"></a>
+              <a href=""><img src="Mi/Mi_Air_purifier.png"></a>
               <p class="explan">
               <a href="#">Mi 공기청정기 3H</a>
               </p>
             </li>
             <li><a href="">
-              <img src="image/Mi/Mi_Air_purifier_2.png"></a>
+              <img src="Mi/Mi_Air_purifier_2.png"></a>
               <p class="explan">
               <a href="#">Mi 공기청정기 2H</a>
               </p>
             </li>
-            <li><a href=""><img src="image/Mi/Airdot.png"></a>
+            <li><a href=""><img src="Mi/Airdot.png"></a>
               <p class="explan">
                <a href="#">Mi True Wireless Earbuds</a>
               </p>
             </li>
-            <li><a href=""><img src="image/Mi/smartband4.png"></a>
+            <li><a href=""><img src="Mi/smartband4.png"></a>
               <p class="explan">
                <a href="#">Mi Smart Band 4</a>
               </p>
             </li>
-            <li><a href=""><img src="image/Mi/bodyscale.png"></a>
+            <li><a href=""><img src="Mi/bodyscale.png"></a>
               <p class="explan">
                <a href="#">Mi 체지방 체중계</a>
               </p>
             </li>
-            <li><a href=""><img src="image/Mi/smartlamp.png"></a>
+            <li><a href=""><img src="Mi/smartlamp.png"></a>
               <p class="explan">
                <a href="#">Mi LED 탁상 램프</a>
               </p>
@@ -109,17 +109,17 @@
         <li>
           <a href="#">Mi 파워뱅크</a>
           <ul class="sub">
-            <li><a href=""><img src="image/Mi/Mi2c.png"></a>
+            <li><a href=""><img src="Mi/Mi2c.png"></a>
               <p class="explan">
                <a href="#">20000mAh Mi 파워뱅크 2C</a>
               </p>
             </li>
-            <li><a href=""><img src="image/Mi/Mi2s.png"></a>
+            <li><a href=""><img src="Mi/Mi2s.png"></a>
               <p class="explan">
                <a href="#">10000mAh Mi 파워뱅크 2S</a>
               </p>
             </li>
-            <li><a href=""><img src="image/Mi/Mi2.png"></a>
+            <li><a href=""><img src="Mi/Mi2.png"></a>
               <p class="explan">
                <a href="#">5000mAh Mi 파워뱅크 2</a>
               </p>
@@ -149,44 +149,44 @@
        <p>Dream big, shoot epic<br>World's 108MP penta camera</p>
      </div>
      <div class="imgcontainer">
-       <img src="image/index-01-phone1-2.png" alt="mi note 10 image">
-      	<img src="image/index-01-phone2.png" alt="">
+       <img src="image_1/index-01-phone1-2.png" alt="mi note 10 image">
+      	<img src="image_1/index-01-phone2.png" alt="">
       </div>
     </div>
     <ul class="Mi_Explanation">
     	<li>
     		<h2>Penta camera with<br>108Mp main camera</h2>
-    		<img src="image/index-02-img01.png" alt="">
+    		<img src="image_1/index-02-img01.png" alt="">
     	</li>
     	<li>
     		<h2>6.47" 3D curved<br>AMOLED display</h2>
-    		<img src="image/index-02-img02.png" alt="">
+    		<img src="image_1/index-02-img02.png" alt="">
     	</li>
     	<li>
     		<h2>Responsive in-screen<br>fingerprint sensor</h2>
-    		<img src="image/index-02-img03.png" alt="">
+    		<img src="image_1/index-02-img03.png" alt="">
     	</li>
     	<li>
     		<h2>5260mAh (typ) high-capacity<br>battery</h2>
-    		<img src="image/index-02-img04.png" alt="">
+    		<img src="image_1/index-02-img04.png" alt="">
     	</li>
     	<li>
     		<h2>In-box 30W fast charge</h2>
-    		<img src="image/index-02-img05.png" alt="">
+    		<img src="image_1/index-02-img05.png" alt="">
     	</li>
     	<li>
     		<h2>Multifunctional NFc</h2>
-    		<img src="image/index-02-img061.png" alt="">
+    		<img src="image_1/index-02-img061.png" alt="">
     	</li>
     </ul>
     <div class="videosection">
-      <video src="image/index-03-backvideo.mp4" autoplay="autoplay" muted="muted" loop>
+      <video src="image_1/index-03-backvideo.mp4" autoplay="autoplay" muted="muted" loop>
       </video>
       <img src="image/play.png" alt="">
       <p>Watch the Video</p>
     </div>
     <div class="welcome">
-    	<img src="image/index-04-backimg.png" alt="">
+    	<img src="image_1/index-04-backimg.png" alt="">
     	<p>Welcome to Penta Camera Era</p>
     </div>
     <div class="Camera">
@@ -194,61 +194,61 @@
     	<div class="camerabox">
     		<img src="image/index-05-phone.png" alt="" class="boximg">
     		<div class="skill skill1">
-    			<img src="image/index-05-carmer01-1.png" alt="">
-    			<img src="image/index-05-carmer01-2.png" alt="">
-    			<img src="image/index-05-carmer01-3.png" alt="">
-    			<img src="image/index-05-carmer01-4.png" alt="">
-    			<img src="image/index-05-carmer01-5.png" alt="">
+    			<img src="image_2/index-05-carmer01-1.png" alt="">
+    			<img src="image_2/index-05-carmer01-2.png" alt="">
+    			<img src="image_2/index-05-carmer01-3.png" alt="">
+    			<img src="image_2/index-05-carmer01-4.png" alt="">
+    			<img src="image_2/index-05-carmer01-5.png" alt="">
     		</div>
     		<div class="skill skill2">
-    			<img src="image/index-05-carmer02-1.png" alt="">
-    			<img src="image/index-05-carmer02-2.png" alt="">
-    			<img src="image/index-05-carmer02-3.png" alt="">
-    			<img src="image/index-05-carmer02-4.png" alt="">
-    			<img src="image/index-05-carmer02-5.png" alt="">
-    			<img src="image/index-05-carmer02-6.png" alt="">
+    			<img src="image_2/index-05-carmer02-1.png" alt="">
+    			<img src="image_2/index-05-carmer02-2.png" alt="">
+    			<img src="image_2/index-05-carmer02-3.png" alt="">
+    			<img src="image_2/index-05-carmer02-4.png" alt="">
+    			<img src="image_2/index-05-carmer02-5.png" alt="">
+    			<img src="image_2/index-05-carmer02-6.png" alt="">
     		</div>
     		<div class="skill skill3">
-    			<img src="image/index-05-carmer03-1.png" alt="">
-    			<img src="image/index-05-carmer03-2.png" alt="">
-    			<img src="image/index-05-carmer03-3.png" alt="">
-    			<img src="image/index-05-carmer03-4.png" alt="">
-    			<img src="image/index-05-carmer03-5.png" alt="">
-    			<img src="image/index-05-carmer03-6.png" alt="">
-    			<img src="image/index-05-carmer03-7.png" alt="">
+    			<img src="image_2/index-05-carmer03-1.png" alt="">
+    			<img src="image_2/index-05-carmer03-2.png" alt="">
+    			<img src="image_2/index-05-carmer03-3.png" alt="">
+    			<img src="image_2/index-05-carmer03-4.png" alt="">
+    			<img src="image_2/index-05-carmer03-5.png" alt="">
+    			<img src="image_2/index-05-carmer03-6.png" alt="">
+    			<img src="image_2/index-05-carmer03-7.png" alt="">
     		</div>
     		<div class="skill skill4">
-    			<img src="image/index-05-carmer04-1.png" alt="">
-    			<img src="image/index-05-carmer04-2.png" alt="">
-    			<img src="image/index-05-carmer04-3.png" alt="">
-    			<img src="image/index-05-carmer04-4.png" alt="">
-    			<img src="image/index-05-carmer04-5.png" alt="">
-    			<img src="image/index-05-carmer04-6.png" alt="">
+    			<img src="image_2/index-05-carmer04-1.png" alt="">
+    			<img src="image_2/index-05-carmer04-2.png" alt="">
+    			<img src="image_2/index-05-carmer04-3.png" alt="">
+    			<img src="image_2/index-05-carmer04-4.png" alt="">
+    			<img src="image_2/index-05-carmer04-5.png" alt="">
+    			<img src="image_2/index-05-carmer04-6.png" alt="">
     		</div>
     		<div class="skill skill5">
-    			<img src="image/index-05-carmer05-1.png" alt="">
-    			<img src="image/index-05-carmer05-2.png" alt="">
-    			<img src="image/index-05-carmer05-3.png" alt="">
+    			<img src="image_2/index-05-carmer05-1.png" alt="">
+    			<img src="image_2/index-05-carmer05-2.png" alt="">
+    			<img src="image_2/index-05-carmer05-3.png" alt="">
     		</div>
     		<div class="cameratext">
     			<div class="camera_f">
-    				<h2>5MP telephoto camera<img src="image/index-05-icon01.png" alt=""></h2>
+    				<h2>5MP telephoto camera<img src="image_2/index-05-icon01.png" alt=""></h2>
     				<p>10x hybrid zoom,<br>50x digital zoom, ƒ/2.0, OIS</p>
     			</div>
     			<div class="camera_f">
-    				<h2>12MP portrait camera<img src="image/index-05-icon02.png" alt=""></h2>
+    				<h2>12MP portrait camera<img src="image_2/index-05-icon02.png" alt=""></h2>
     				<p>2x optical zoom, 1.4μm, ƒ/2.0, Dual pixel autofocus</p>
     			</div>
     			<div class="camera_f">
-    				<h2>108MP ultra high-resolution camera<img src="image/index-05-icon03.png" alt=""></h2>
+    				<h2>108MP ultra high-resolution camera<img src="image_2/index-05-icon03.png" alt=""></h2>
     				<p>1/1.33″ super sensor, 7P lens, ƒ/1.69, 4-axis OIS</p>
     			</div>
     			<div class="camera_f">
-    				<h2>20MP ultra wide-angle camera<img src="image/index-05-icon04.png" alt=""></h2>
+    				<h2>20MP ultra wide-angle camera<img src="image_2/index-05-icon04.png" alt=""></h2>
     				<p>FOV 117°, ƒ/2.2</p>
     			</div>
     			<div class="camera_f">
-    				<h2>2MP macro camera<img src="image/index-05-icon05.png" alt=""></h2>
+    				<h2>2MP macro camera<img src="image_2/index-05-icon05.png" alt=""></h2>
     				<p>macro zoom shooting</p>
     			</div>
     			<p>"Mi Note 10 Pro is equipped with 8P main camera."</p>
@@ -257,7 +257,7 @@
     </div>
     <div class="boxgallery">
       <div class="boxtxt">
-    	  <h2>First mass-produced 108MP camera<img src="image/index-05-icon03.png" alt=""><br>Enjoy clear, detailed pictures<br>lens</h2>
+    	  <h2>First mass-produced 108MP camera<img src="image_2/index-05-icon03.png" alt=""><br>Enjoy clear, detailed pictures<br>lens</h2>
     	  <p>Unpresentedly, Mi Note 10 features a 108MP camera, with a single photo resolution of up to 12032 x 9024, 12 times as high as 4K resolution! With a super large image sensor in a size of 1/1.33", the camera in Mi Note 10 surpasses most digital cameras. By capturing more light and details, it reproduces the magnificence of the landscape. Isn't it breathtaking?</p>
       </div>
     	<div class="gallerybox">
@@ -265,7 +265,7 @@
     </div>
     <div class="zoom">
       <div class="zoomtxt">
-    	  <h2>5MP telephoto camera<img src="image/index-05-icon01.png" alt=""></h2>
+    	  <h2>5MP telephoto camera<img src="image_2/index-05-icon01.png" alt=""></h2>
     	  <p>Excellent 10x hybrid zoom telephoto camera with 4-axis OIS letting your eyes see more.</p>
       </div>
     	<video src="image/Zoom.mp4" autoplay="autoplay" muted="muted"></video>
@@ -273,18 +273,18 @@
     <div class="portrait">
     	<div class="portraitTxt">
     	  <h2>
-    	  	12MP<img src="image/index-05-icon02.png" alt=""><br>portrait<br>camera
+    	  	12MP<img src="image_2/index-05-icon02.png" alt=""><br>portrait<br>camera
     	  </h2>
     	  <p>
     	  	Optimal quality portrait mode with 50mm lens; Dual PD enhances focus accuracy; ultra-bright 1.4μm, accurate laser auto focus and soft light for capturing beauty even in dark surroundings.
     	  </p>
       </div>
       <div class="portraitImg1">
-        <img src="image/index-07-02-img01.png" alt="">
+        <img src="image_2/index-07-02-img01.png" alt="">
         <p>Photo taken by portrait camera</p>
       </div>
       <div class="portraitImg2">
-        <img src="image/index-07-02-img02.png" alt="">
+        <img src="image_2/index-07-02-img02.png" alt="">
         <p>Real scene</p>
       </div>
     </div>
@@ -293,7 +293,7 @@
     	  <h2>20 MP ultra-wide-angle camera</h2>
     	  <p>117°ultra-clear, ultra wide-angle camera, one-click panoramic view</p>
       </div>
-    	<img src="image/index-07-03-img01.jpg" alt="">
+    	<img src="image_2/index-07-03-img01.jpg" alt="">
     	<div class="blackbox"></div>
     </div>
     <div class="slide">
@@ -302,9 +302,9 @@
     	  <p>Discover a micro universe with macro camera</p>
       </div>
     	<ul class="E_slide">
-    		<li><img src="image/index-07-04-img01.png" alt=""></li>
-    		<li><img src="image/index-07-04-img02.png" alt=""></li>
-    		<li><img src="image/index-07-04-img03.png" alt=""></li>
+    		<li><img src="image_2/index-07-04-img01.png" alt=""></li>
+    		<li><img src="image_2/index-07-04-img02.png" alt=""></li>
+    		<li><img src="image_2/index-07-04-img03.png" alt=""></li>
     	</ul>
     </div>
     <div class="videoBox">
@@ -314,9 +314,9 @@
 First Mi Phone that supports the new Night Mode 2.0 and features RAW-based multi frame composition that allows you to take pictures without worrying about the dark.</p>
       </div>
       <div class="videocontainer">
-        <video src="image/index-08-backvlog.mp4" autoplay="autoplay" muted="muted" loop></video>
-        <img src="image/index-08-backimg05.png" alt="">
-        <video src="image/index-08-vlog.mp4" autoplay="autoplay" muted="muted" loop></video>
+        <video src="image_2/index-08-backvlog.mp4" autoplay="autoplay" muted="muted" loop></video>
+        <img src="image_2/index-08-backimg05.png" alt="">
+        <video src="image_2/index-08-vlog.mp4" autoplay="autoplay" muted="muted" loop></video>
       </div>
       <div class="videoBtn">
         <span>Vlog mode</span><span>Night mode</span>
@@ -327,10 +327,10 @@ First Mi Phone that supports the new Night Mode 2.0 and features RAW-based multi
         <h2>32MP selfie camera</h2>
         <p>Ultra-high resolution that captures minute details like individual hairs and eyelashes,while the post-editing feature retains its high-quality</p>
       </div>
-      <img src="image/index-09-img01.png" alt="">
+      <img src="image_2/index-09-img01.png" alt="">
     </div>
     <div class="welcome">
-      <img src="image/index-04-backimg.png" alt="">
+      <img src="image_1/index-04-backimg.png" alt="">
       <p>Ultimate aesthetic and sensory<br>experience</p>
     </div>
     <div class="displayBox">
@@ -358,10 +358,10 @@ Corning® Gorilla® glass front and back</h2>
         <h2>New responsive in-screen fingerprint sensor</h2>
         <p>Mi Note 10 employs all-new, ultra-flat screen unlocking technology and further optimizes the unlocking experience in bright light, with dry fingers and at low temperatures. Not only is the unlocking button sensitivity heightened, but the success rate has also increased.</p>
       </div>
-      <img src="image/index-12-img01.png" alt="">
+      <img src="image_2/index-12-img01.png" alt="">
     </div>
     <div class="welcome">
-      <img src="image/index-04-backimg.png" alt="">
+      <img src="image_1/index-04-backimg.png" alt="">
       <p>Ultimate performance<br>experience</p>
     </div>
     <div class="charging">
@@ -397,7 +397,7 @@ It also comes with a 30W flash charge in the box, which can recharge the battery
       <div class="graph1">
         <span class="firstline"></span><span class="secline"></span>
       </div>
-      <img src="image/index-15-img01.png" alt="">
+      <img src="image_2/index-15-img01.png" alt="">
       <p>* The data is from the official website of Qualcomm® Snapdragon™.</p>
     </div>
     <div class="promotion">
@@ -405,10 +405,10 @@ It also comes with a 30W flash charge in the box, which can recharge the battery
         <div class="promotion1Txt">
           <p>Multifunctional NFC<br>Supports Google<Br>Pay</p>
         </div>
-        <img src="image/index-16-img01.png" alt="">
+        <img src="image_3/index-16-img01.png" alt="">
       </div>
       <div class="promotion2">
-        <img src="image/index-16-img02.png" alt="">
+        <img src="image_3/index-16-img02.png" alt="">
         <div class="promotion2Txt">
           <p>
             IR blaster<br>Giving you the<br>power to control<br> home devices from<br>your phone
@@ -419,7 +419,7 @@ It also comes with a 30W flash charge in the box, which can recharge the battery
         <div class="promotion3Txt">
           <p>3.5mm Headphone<Br>Jack<br>USB Type-C</p>
         </div>
-        <img src="image/index-16-img03.png" alt="">
+        <img src="image_3/index-16-img03.png" alt="">
       </div>
     </div>
     <div class="MIUI">
@@ -434,9 +434,9 @@ and with Mi wireless printing, you don't need a computer to print.</p>
     <div class="empty1"></div>
     <div class="slidephone">
       <div class="slidephoneBox">
-        <img src="image/index-17-img01.png" alt="">
-        <img src="image/index-17-img02.png" alt="">
-        <img src="image/index-17-img03.png" alt="">
+        <img src="image_3/index-17-img01.png" alt="">
+        <img src="image_3/index-17-img02.png" alt="">
+        <img src="image_3/index-17-img03.png" alt="">
       </div>
       <div class="slidedots">
         <span></span>
