--- a/Xiomi/index.html
+++ b/Xiomi/index.html
@@ -192,7 +192,7 @@
     <div class="Camera">
       <h2>All-scenario imaging system</h2>
     	<div class="camerabox">
-    		<img src="image/index-05-phone.png" alt="" class="boximg">
+    		<img src="image_2/index-05-phone.png" alt="" class="boximg">
     		<div class="skill skill1">
     			<img src="image_2/index-05-carmer01-1.png" alt="">
     			<img src="image_2/index-05-carmer01-2.png" alt="">
