--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>WelCome to Kim Hee Chang Portfolio</title>
   <link rel="stylesheet" href="css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
   <div id="Wrap">
